--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,3 +39,15 @@ jobs:
         run: sudo docker rm -f kidsback 
       - name: Run docker container
         run: sudo docker run -d -p 8000:8000 --name kidsback tengoshamugia/kidsback
+
+  
+  deploy-3:
+    needs: build
+    runs-on: ["self-hosted", "back"]
+    steps:
+      - name: Pull image from docker hub
+        run: sudo docker pull tengoshamugia/kidsback:latest
+      - name: Delete old container
+        run: sudo docker rm -f kidsback 
+      - name: Run docker container
+        run: sudo docker run -d -p 8000:8000 --name kidsback tengoshamugia/kidsback
