--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,10 @@
 asgiref==3.8.1
-certifi==2024.7.4
-cffi==1.16.0
-charset-normalizer==3.3.2
-cryptography==42.0.8
-defusedxml==0.8.0rc2
+distlib==0.3.6
 Django==4.1.4
-django-extensions==3.2.3
-django-rest-framework==0.1.0
-django-templated-mail==1.1.1
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-djoser==2.2.3
-idna==3.7
-oauthlib==3.2.2
-pycparser==2.22
-PyJWT==2.8.0
-python3-openid==3.2.0
-requests==2.32.3
-requests-oauthlib==2.0.0
-simplejwt==2.0.1
-social-auth-app-django==5.4.1
-social-auth-core==4.5.4
-sqlparse==0.5.0
-typing==3.7.4.3
+django-cors-headers==4.3.1
+djangorestframework==3.15.1
+filelock==3.8.2
+platformdirs==2.6.0
+sqlparse==0.4.4
 tzdata==2024.1
-urllib3==2.2.2
+virtualenv==20.17.1
